# hello-world

./: README.md  cavity_flow_lbm.m  github-skills-search.md
skills/GenericAgent/: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  TMWebDriver.py  agent_loop.py  agentmain.py  ga.py  hub.pyw  launch.pyw  llmcore.py  mykey_template.py  mykey_template_en.py  pyproject.toml  simphtml.py
skills/GenericAgent/assets/: SETUP_FEISHU.md  agent_bbs.py  code_run_header.py  global_mem_insight_template.txt  global_mem_insight_template_en.txt  insight_fixed_structure.txt  insight_fixed_structure_en.txt  install-macos-app.sh  install_python_windows.bat  sys_prompt.txt  sys_prompt_en.txt  tool_usable_history.json  tools_schema.json  tools_schema_cn.json
skills/GenericAgent/assets/tmwd_cdp_bridge/: background.js  content.js  disable_dialogs.js  manifest.json  popup.js
skills/GenericAgent/frontends/: DESKTOP_PET_README.md  chatapp_common.py  continue_cmd.py  dcapp.py  desktop_pet.pyw  desktop_pet_v2.pyw  dingtalkapp.py  fsapp.py  genericagent_acp_bridge.py  qqapp.py  qtapp.py  stapp.py  stapp2.py  tgapp.py  wechatapp.py  wecomapp.py
skills/GenericAgent/memory/: adb_ui.py  autonomous_operation_sop.md  keychain.py  ljqCtrl.py  ljqCtrl_sop.md  memory_cleanup_sop.md  memory_management_sop.md  ocr_utils.py  plan_sop.md  procmem_scanner.py  procmem_scanner_sop.md  scheduled_task_sop.md  supervisor_sop.md  tmwebdriver_sop.md  ui_detect.py  vision_api.template.py  vision_sop.md  web_setup_sop.md
skills/GenericAgent/memory/L4_raw_sessions/: compress_session.py
skills/GenericAgent/memory/autonomous_operation_sop/: helper.py  task_planning.md
skills/GenericAgent/memory/skill_search/: SKILL.md
skills/GenericAgent/plugins/: langfuse_tracing.py
skills/GenericAgent/reflect/: agent_team_worker.py  autonomous.py  scheduler.py
skills/ml-intern/: .gitignore  AGENTS.md  Dockerfile  README.md  REVIEW.md  pyproject.toml
skills/ml-intern/.github/workflows/: ci.yml  claude-review.yml  claude.yml
skills/ml-intern/agent/: README.md  __init__.py  config.py  main.py
skills/ml-intern/agent/context_manager/: __init__.py  manager.py
skills/ml-intern/agent/core/: __init__.py  agent_loop.py  approval_policy.py  cost_estimation.py  doom_loop.py  effort_probe.py  hf_access.py  hf_router_catalog.py  hf_tokens.py  hub_artifacts.py  llm_params.py  local_models.py  model_switcher.py  prompt_caching.py  redact.py  session.py  session_persistence.py  session_uploader.py  telemetry.py  tools.py
skills/ml-intern/agent/messaging/: __init__.py  base.py  gateway.py  models.py  slack.py
skills/ml-intern/agent/prompts/: system_prompt.yaml  system_prompt_v3.yaml
skills/ml-intern/agent/sft/: tagger.py
skills/ml-intern/agent/tools/: __init__.py  dataset_tools.py  docs_tools.py  edit_utils.py  github_list_repos.py  hf_repo_files_tool.py  hf_repo_git_tool.py  jobs_tool.py  types.py  (+10 more)
skills/ml-intern/backend/: __init__.py  dependencies.py  kpis_scheduler.py  main.py  models.py  session_manager.py  start.sh  user_quotas.py
skills/ml-intern/configs/: cli_agent_config.json  frontend_agent_config.json
skills/ml-intern/frontend/: index.html  package.json  vite.config.ts
skills/ml-intern/scripts/: build_kpis.py  build_sft.py  prioritize_backlog.py  sweep_orphan_sandboxes.py
(+98 files in other folders)
